--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "npx @tailwindcss/cli -i ./src/styles.css -o ./dist/output.css --watch",
-    "build" : "npx @tailwindcss/cli -i ./src/styles.css -o ./dist/output.css --minify"
+    "dev": "npx @tailwindcss/cli -i ./src/styles.css -o ./dist/output.css --watch",
+    "build": "npx @tailwindcss/cli -i ./src/styles.css -o ./dist/output.css --minify"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,9 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2"
   }
 }
